--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,9 @@ allprojects {
         jcenter()
         maven { url "https://jitpack.io" }
         maven { url "https://maven.google.com" }
+        maven {
+            url "https://dl.bintray.com/liubin0304/TenmaVentures"
+        }
         flatDir {
             dirs 'libs'
         }
